[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-ai"
authors = [{name = "Tom Usher", email = "tom@tomusher.com"}]
description = "Get a hand writing your content with AI super powers!"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
]
dynamic = ["version"]
dependencies = [
    "Django>=3.2",
    "Wagtail>=5.2",
    "langchain>=0.0.106",
    "tiktoken>=0.3.3",
    "every-ai>=1.1.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
openai = [
    "every-ai[openai]>=1.1.1"
]
anthropic = [
    "every-ai[anthropic]>=1.1.1"
]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.2",
    "pytest-django>=4.5.2",
    "wagtail-factories>=4.1.0",
    "factory-boy>=3.3.0"
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.5",
    "mkdocs-awesome-pages-plugin>=2.9.2"
]

[project.urls]
Home = "https://github.com/tomusher/wagtail-ai"

[tool.ruff]
select = ["F", "E", "C90", "I", "B", "DJ", "RUF", "TRY", "C4"]
ignore = ["TRY003", "E501", "RUF012"]

[tool.flit.module]
name = "wagtail_ai"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testapp.settings"
pythonpath = ["./", "./tests"]

[tool.flit.sdist]
include = [
    "wagtail_ai/static"
]
exclude = [
    "wagtail_ai/static_src",
    "wagtail_ai/test",
    "wagtail_ai/static/wagtail_ai/js/.gitignore",
    "tests",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]
