[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-ai"
authors = [{name = "Tom Usher", email = "tom@tomusher.com"}]
description = "Get a hand writing your content with AI super powers!"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
]
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "Wagtail>=5.2",
    "llm>=0.12",
]
requires-python = ">=3.11"

[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit>=3.6.0",
    "django-types>=0.18.0",
    "pytest>=7.4.2",
    "pytest-django>=4.5.2",
    "pytest-mock>=3.12.0",
    "wagtail-factories>=4.1.0",
    "factory-boy>=3.3.0",
    "coverage>=7.4.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.5",
    "mkdocs-awesome-pages-plugin>=2.9.2"
]

[project.urls]
Home = "https://github.com/wagtail/wagtail-ai"

[tool.ruff]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "DJ",  # flake8-django
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "TRY", # tryceratops
]
ignore = ["TRY003", "E501", "RUF012"]

[tool.flit.module]
name = "wagtail_ai"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testapp.settings"
pythonpath = ["./", "./tests"]

[tool.flit.sdist]
include = [
    "src/wagtail_ai/static/wagtail_ai"
]
exclude = [
    "docs",
    "src/wagtail_ai/static_src",
    "src/wagtail_ai/static/wagtail_ai/js/.gitignore",
    "tests",
    "testmanage.py",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "TODOs",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]

[tool.pyright]
include = ["src/**"]
exclude = ["**/migrations", ".tox/**", ".venv", "venv/**", "node_modules/**"]
venvPath = ".venv"
venv = ".venv"
pythonVersion = "3.11"
pythonPlatform = "Linux"
